your commit message here

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <meta name="description"
     content="CloudNine Media — Ibadan-based creative studio for branding, logo design, book covers, publishing, pencil drawing. We transform ideas into compelling visuals." />
   <meta name="keywords"
-    content="CloudNine Media, branding, logo design, book cover design, Ibadan, Nigeria, graphic design" />
+    content="CloudNine Media, branding, logo design, book cover design, graphic design, Nigeria, Worldwide" />
   <meta name="author" content="CloudNine Media" />
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="CloudNine Media" />
   <meta property="og:description" content="Branding, Logos, Book Covers & Flyers." />
   <meta property="og:type" content="website" />
-  <!-- TODO: UPDATE THIS TO YOUR LIVE URL WHEN READY -->
+  <!-- TODO: I WILL UPDATE THIS TO MY LIVE URL WHEN IT'S READY -->
   <meta property="og:url" content="https://yourwebsite.com" />
   <meta property="og:image" content="img/cloudlogo.jpg" />
   <meta property="og:image:width" content="1200" />
@@ -26,7 +26,7 @@
 
   <!-- FAVICON (INLINE SVG) -->
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2218%22 fill=%22%23ff7a00%22/><text x=%2250%25%22 y=%2258%25%22 font-family=%22Arial%22 font-weight=%22700%22 font-size=%2256%22 text-anchor=%22middle%22 fill=%22white%22>C9</text></svg>" />
+   href="img/cloudlogo.jpg"
 
   <!-- FONTS (INTER + POPPINS) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -54,7 +54,7 @@
         </div>
         <div>
           <div style="font-size: 1.12rem;padding-bottom: 5px;">CloudNine Media</div>
-          <div class="tag">Branding • Logos • Book Covers</div>
+          <div class="tag">Branding • Logos • Publishing</div>
         </div>
       </div>
 
@@ -82,12 +82,12 @@
     <section id="welcome" class="hero">
       <div class="container hero-grid">
         <div>
-          <span class="pill">Welcome to CloudNine</span>
-          <h1>
-            We make branding <span style="color: var(--orange)">simple, striking,</span>
+
+          <span class="pill"><b style="color:rgb(249, 122, 63)">Welcome to CloudNine Media</b></span>
+          <h1 style="color:black">We make branding<span style="color: var(--orange)"> simple, striking,</span>
             and strategic.
           </h1>
-          <p>Logo Design, Graphics Design, Branding, Book covers.</p>
+          <p><b>Logo Design, Graphics Design, Branding, Book covers.</b></p>
 
           <div class="hero-actions">
             <a class="btn"
@@ -97,10 +97,10 @@
           </div>
 
           <div class="hero-badges">
-            <span class="badge">Since 2017</span>
-            <span class="badge">Nigeria</span>
-            <span class="badge">Fast Turnaround</span>
-            <span class="badge">Trusted Service</span>
+            <span class="badge"><b style="color:rgb(249, 122, 63)">Nationwide</b></span>
+            <span class="badge"><b style="color:rgb(249, 122, 63)">Worldwide</b></span>
+            <span class="badge"><b style="color:rgb(249, 122, 63)">Fast Turnaround</b></span>
+            <span class="badge"><b style="color:rgb(249, 122, 63)">Trusted Service</b></span>
           </div>
 
           <!-- STATS -->
@@ -123,7 +123,8 @@
           <div class="divider"></div>
           <img alt="Showcase design preview" src="img/photo1.jpg" class="showcase-img" loading="lazy"
             decoding="async" />
-          <h4 style="margin-top: 10px">A modern visual identity exploring bold typography</h4>
+          <h4 style="margin-top: 10px"><b style="color:black">A modern visual identity exploring bold typography</b>
+          </h4>
           <p>Warm orange accents and clear hierarchy for a confident brand feel.</p>
         </div>
       </div>
@@ -244,14 +245,10 @@
             <div class="foliobar"><span>Book Cover</span><span>→<span></div>
           </a>
 
-          <a class="folio" aria-label="Wall & Interior Decoration">
-            <img src="img/wall.jpg" alt="Wall & Interior Decoration" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Wall & Interior Decoration</span></div>
-          </a>
-
-          <a class="folio" aria-label="Pencil Drawing">
-            <img src="img/pencil.jpg" alt="Pencil drawing artwork" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>Pencil Drawing</span></div>
+          <a href="https://www.behance.net/gallery/232650717/PRODUCT-DESIGN" class="folio"
+            aria-label="3D Modeling & Visualization">
+            <img src="img/3D.jpg" alt="3D Modeling & Visualization" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>3D Modeling & Visualization</span><span>→<span></div>
           </a>
 
           <a href="https://www.behance.net/gallery/178913835/SOCIAL-MEDIA-FLYER" class="folio"
@@ -271,9 +268,19 @@
             <div class="foliobar"><span>Logo Design</span><span>→<span></div>
           </a>
 
+          <a class="folio" aria-label="Wall & Interior Decoration">
+            <img src="img/wall.jpg" alt="Wall & Interior Decoration" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>Wall & Interior Decoration</span></div>
+          </a>
+
           <a class="folio" aria-label="Digital Painting">
             <img src="img/photo3.jpg" alt="Digital painting" loading="lazy" decoding="async" />
             <div class="foliobar"><span>Digital Painting</span></div>
+          </a>
+
+          <a class="folio" aria-label="Pencil Drawing">
+            <img src="img/pencil.jpg" alt="Pencil drawing artwork" loading="lazy" decoding="async" />
+            <div class="foliobar"><span>Pencil Drawing</span></div>
           </a>
 
           <a class="folio" aria-label="Art & Craft">
@@ -281,26 +288,20 @@
             <div class="foliobar"><span>Art & Craft</span></div>
           </a>
 
-          <a href="https://www.behance.net/gallery/232650717/PRODUCT-DESIGN" class="folio"
-            aria-label="3D Modeling & Visualization">
-            <img src="img/3D.jpg" alt="3D Modeling & Visualization" loading="lazy" decoding="async" />
-            <div class="foliobar"><span>3D Modeling Visualization</span><span>→<span></div>
-          </a>
 
           <a class="folio" aria-label="Presentation Slides">
             <img src="img/slides.jpg" alt="Presentation Slides" loading="lazy" decoding="async" />
             <div class="foliobar"><span>Presentation Slides</span></div>
           </a>
 
-           <div class="hero-card">
-          <div class="tag">More Designs?</div>
-          <div class="divider"></div>
-          <p>
-           Want to see more of our designs? Click the button below.
-          </p>
-          <a class="btn"
-            href="https://www.behance.net/adesolaayobami1">See More</a>
-        </div>
+          <div class="hero-card">
+            <div class="tag">More Designs?</div>
+            <div class="divider"></div>
+            <p>
+              Want to see more of our designs? Click the button below.
+            </p>
+            <a class="btn" href="https://www.behance.net/adesolaayobami1">See More</a>
+          </div>
 
         </div>
       </div>
@@ -450,7 +451,7 @@
                 <div class="avatar" style="background-image: url('img/naomy.jpg')"></div>
                 <div>
                   <b>Olaoyo Naomy.</b>
-                  <div class="tag">Naomeal Foods</div>
+                  <div class="tag">Naomeal</div>
                 </div>
               </div>
               <p>“Thank you so much for the design, very attractive. Quick iterations, clean designs, great
@@ -464,54 +465,59 @@
     <!-- ============================
            CONTACT / FORM SECTION
          ============================ -->
+
     <section id="contact">
       <div class="container contact">
         <!-- CONTACT FORM -->
         <form action="https://formspree.io/f/meozdgrq" method="POST">
-          <div class="field">
-            <label for="name">Name</label>
-            <input id="name" name="name" placeholder="Your full name" required />
-          </div>
+          <div class="hero-card">
+            <div class="tag">Partnership With Us</div>
+            <div class="divider"></div>
+            <div class="field">
+              <label for="name">Name</label>
+              <input id="name" name="name" placeholder="Your full name" required />
+            </div>
 
-          <div class="field">
-            <label for="email">Email</label>
-            <input id="email" name="_replyto" type="email" placeholder="you@example.com" required />
-          </div>
+            <div class="field">
+              <label for="email">Email</label>
+              <input id="email" name="_replyto" type="email" placeholder="you@example.com" required />
+            </div>
 
-          <div class="field">
-            <label for="service">Service</label>
-            <select id="service" name="service">
-              <option>Logo &amp; Visual Identity</option>
-              <option>Product &amp; Packaging Design</option>
-              <option>Book Cover Design</option>
-              <option>Framing</option>
-              <option>Advertising</option>
-              <option>Branding</option>
-              <option>Social Media Management</option>
-              <option>Brand Marketing</option>
-              <option>Publishing</option>
-              <option>Pencil Drawing</option>
-              <option>Wall &amp; Interior Decoration</option>
-              <option>Other Design</option>
-              <option>Consultation</option>
-            </select>
-          </div>
+            <div class="field">
+              <label for="service">Service</label>
+              <select id="service" name="service">
+                <option>Logo &amp; Visual Identity</option>
+                <option>Product &amp; Packaging Design</option>
+                <option>Book Cover Design</option>
+                <option>Framing</option>
+                <option>Advertising</option>
+                <option>Branding</option>
+                <option>Social Media Management</option>
+                <option>Brand Marketing</option>
+                <option>Publishing</option>
+                <option>Pencil Drawing</option>
+                <option>Wall &amp; Interior Decoration</option>
+                <option>Other Design</option>
+                <option>Consultation</option>
+              </select>
+            </div>
 
-          <div class="field">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" placeholder="Share goals, audience, timeline…"
-              required></textarea>
+            <div class="field">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" placeholder="Share goals, audience, timeline…"
+                required></textarea>
+            </div>
           </div>
 
           <!-- OPTIONAL NOTE ELEMENT USED BY JS DEMO -->
           <p id="formNote" class="muted" aria-live="polite"></p>
 
-          <button class="btn" type="submit">Send Message</button>
+          <button class="btn" type="submit">Subscribe</button>
         </form>
 
         <!-- CONTACT CARD -->
         <div class="hero-card">
-          <div class="tag">Contact</div>
+          <div class="tag">Our Address</div>
           <div class="divider"></div>
           <p>
             <b>CloudNine Media</b><br />Block 1, Plot 2, Omololu Olunloyo GRA, Adeoyo, Ring Road, Ibadan, Nigeria.
@@ -523,11 +529,6 @@
             </iframe>
           </div>
 
-
-          <p>
-            <a href="mailto:cloudninegloballimited@gmail.com">cloudninegloballimited@gmail.com</a><br />
-            <a href="tel:+2348065959001">+234 806 595 9001</a>
-          </p>
           <div class="divider"></div>
           <p class="muted">Prefer WhatsApp? Tap the orange button below.</p>
         </div>
