--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="img/cloudlogo.jpg" alt="CloudNine Media logo" width="48" height="48" decoding="async" />
         </div>
         <div>
-          <div style="font-size: 1.12rem;padding-bottom: 5px;">CloudNine Media</div>
+          <div>CloudNine Media</div>
           <div class="tag">Branding • Logos • Publishing</div>
         </div>
       </div>
